--- a/web/css/loginpage.css
+++ b/web/css/loginpage.css
@@ -3,7 +3,7 @@ body{
 	margin: 0;
 	padding: 0;
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", "serif";
-	background: linear-gradient(120deg,red, black);
+	background: linear-gradient(135deg,rgba(36,46,77, .9),rgba(137,126,121, .9));
 	height: 100vh;
 	overflow: hidden;
 }
